--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Sora:wght@400;600;700&display=swap");
 
 @import "tailwindcss";
+
+
+@keyframes fadeInScale {
+    0% { opacity: 0; transform: scale(0); }
+    100% { opacity: 1; transform: scale(1); }
+  }
+  .custom-dot-animate {
+    animation: fadeInScale 0.5s ease-out forwards;
+  }
+  
